--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "cypress-command-chain",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "See the chained Cypress commands while the test is running",
+  "main": "src/index.js",
+  "files": [
+    "src"
+  ],
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "cypress-plugin"
+  ],
+  "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "cypress": "^9.5.0",
     "prettier": "^2.5.1"
