--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-command-chain",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "See the chained Cypress commands while the test is running",
   "main": "src/index.js",
   "files": [
@@ -8,7 +8,8 @@
   ],
   "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "cypress-plugin"
@@ -17,6 +18,11 @@
   "license": "MIT",
   "devDependencies": {
     "cypress": "^9.5.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "semantic-release": "^19.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bahmutov/cypress-command-chain.git"
   }
 }
