--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cypress run",
     "semantic-release": "semantic-release",
     "badges": "npx -p dependency-version-badge update-badge cypress"
   },
@@ -18,9 +18,9 @@
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "cypress": "^11.1.0",
-    "prettier": "^2.5.1",
-    "semantic-release": "^19.0.2"
+    "cypress": "15.7.1",
+    "prettier": "3.7.4",
+    "semantic-release": "25.0.2"
   },
   "repository": {
     "type": "git",
